--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - DB_NAME=subs
       - DB_PORT=5432
     depends_on:
-      - db
+      db:
+        condition: service_healthy  
+    restart: on-failure  
 
   db:
     image: postgres:16
@@ -25,6 +27,12 @@ services:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d subs"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+      start_period: 10s
 
 volumes:
   pgdata:
