--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,14 @@ services:
     ports:
       - "8080:8080"
     environment:
+      - SERVER_PORT=8080
       - DB_HOST=db
       - DB_USER=postgres
       - DB_PASSWORD=123456789
       - DB_NAME=subs
       - DB_PORT=5432
+      - DB_SSLMODE=disable
+      - LOG_LEVEL=info
     depends_on:
       db:
         condition: service_healthy  
